<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/animation"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/vacation_venture"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/login_green"
                android:fontFamily="@font/auto_pen" />


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/animation"/>

        </LinearLayout>
        
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_background"
        android:layout_width="270dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_broad"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="254dp"
            android:layout_height="367dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:letterSpacing="1"
                android:text="@string/login_text"
                android:textColor="@color/login_green"
                android:textSize="25sp"
                android:layout_marginVertical="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/loginView_Account_input"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/login_green"
                    android:letterSpacing="0.1"
                    android:paddingRight="3dp"/>

                <EditText
                    android:id="@+id/editText_account_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@drawable/login_input_broad"
                    android:hint="@string/loginView_Account_hint"
                    android:textSize="18sp"
                    android:textColor="@color/tran_gray"
                    android:padding="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/loginView_Password_input"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/login_green"
                    android:letterSpacing="0.1"
                    android:paddingRight="3dp"/>

                <EditText
                    android:id="@+id/editText_password_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@drawable/login_input_broad"
                    android:hint="@string/loginView_Password_hint"
                    android:textSize="18sp"
                    android:textColor="@color/tran_gray"
                    android:padding="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_tips"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sensitive_tips"
                    android:textColor="@color/sensitive_green"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/and"
                    android:gravity="center"
                    android:textSize="10sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/service_tips"
                    android:textColor="@color/sensitive_green"
                    android:gravity="center"
                    android:textSize="10sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:padding="3dp"
                android:paddingStart="25dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/sensitive_green"
                    android:textSize="10sp"
                    android:text="@string/unload"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/sensitive_green"
                    android:textSize="10sp"
                    android:text="@string/unload"
                    android:gravity="center"/>

            </LinearLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_btn_board"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:letterSpacing="1.1"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/robo_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Version" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unload" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>