<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container">

    <FrameLayout
        android:id="@+id/main_activity_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/repeat_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/niv_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <RelativeLayout
                    android:id="@+id/main_activity_history_btn"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="2dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/menu_history"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/navigation_history"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id = "@+id/main_activity_report_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingBottom="2dp">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/logo"
                    android:layout_centerHorizontal="true"
                    android:transitionName="LogoTrans"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/navigation_report"
                    android:fontFamily="@font/auto_pen"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <RelativeLayout
                    android:id="@+id/main_activity_mine_btn"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="2dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/menu_mine"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/navigation_mine"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>




    </RelativeLayout>



</RelativeLayout>